[tool.poetry]
name = "globalpayments-python-sdk"
version = "0.1.0"
description = ""
authors = ["DevTeam <noreply@tripleplaypay.com>"]
readme = "README.md"
packages = [{ include = "python_sdk" }]

[tool.poetry.dependencies]
python = "^3.11"
certifi = "2024.7.4"
cffi = "1.17.0"
cryptography = "43.0.1"
enum34 = "1.1.10"
idna = "3.7"
iniconfig = "2.0.0"
jsonpickle = "3.2.2"
packaging = "24.0"
pluggy = "1.4.0"
pycparser = "2.22"
pyOpenSSL = "24.2.1"
pytest = "8.1.1"
urllib3 = "1.26.19"
urllib3-secure-extra = "0.1.0"
xmltodict = "0.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
